github/ci/services/sippy/manifests/full.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sippy
---
kind: Service
apiVersion: v1
metadata:
  name: sippy
  namespace: sippy
spec:
  selector:
    app: sippy
  ports:
  - port: 80
    targetPort: 8080
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: sippy
  namespace: sippy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sippy
  serviceName: ""
  template:
    metadata:
      labels:
        app: sippy
    spec:
      containers:
      - name: sippy-server
        image: "quay.io/kubevirtci/sippy@sha256:2375c30f04b5cb2c56abd54e712aa7a6ffe48b0e07f1fa1962775d67489cea96"
        resources:
          requests:
            memory: 800Mi
          limits:
            memory: 1500Mi
        volumeMounts:
        - mountPath: /data
          name: sippy
        command:
        - /go/src/sippy/sippy
        args:
        - --local-data
        - /data
        - --dashboard
        - kubevirt/kubevirt=kubevirt-presubmits,kubevirt-periodics=
        - --variant
        - kube
        - --end-day
        - "7"
        - --server
      - name: sippy-fetch
        image: "quay.io/kubevirtci/sippy@sha256:2375c30f04b5cb2c56abd54e712aa7a6ffe48b0e07f1fa1962775d67489cea96"
        resources:
          requests:
            memory: 200Mi
          limits:
            memory: 500Mi
        volumeMounts:
        - mountPath: /data
          name: sippy
        command:
        - /bin/bash
        args:
        - -c
        - |
          # sleep before fetching so that if we're in some sort of fast crashloop/reschedule mode,
          # we don't ping testgrid everytime we come back up
          echo "Doing initial sleep before fetching testgrid data"
          sleep 600 # 10 minutes
          while [ true ]; do
            echo "Fetching new testgrid data"
            rm -rf /data/*
            /go/src/sippy/sippy -v 4 --fetch-data /data --dashboard kubevirt/kubevirt=kubevirt-presubmits,kubevirt-periodics= --variant kube
            echo "Done fetching data, refreshing server"
            curl localhost:8080/refresh
            echo "Done refreshing data, sleeping"
            sleep 3600  # 1 hour
          done
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: sippy
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 50Gi
