github/ci/services/sippy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sippy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - sippy.ci.kubevirt.io
    secretName: sippy-tls
  rules:
  - host: sippy.ci.kubevirt.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sippy
            port:
              number: 80
